# lib-python-projects

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: conflict-analyst.md  context-extractor.md  developer.md  planner.md  reviewer.md
.claude/skills/orchestrate-tickets/: SKILL.md
.claude/skills/process-ticket/: SKILL.md
.github/workflows/: lint.yml  release.yml  test.yml  ticket.yml
.serena/: .reminder-state.json  project.yml
.seretos/: projects.yml
src/lib_python_projects/: __init__.py  autodiscover.py  finder.py  loader.py  markers.py  models.py
src/lib_python_projects/providers/: __init__.py  _http_cache.py  _idempotency.py  azuredevops.py  base.py  github.py  github_batch.py  gitlab.py
tests/: conftest.py  test_azuredevops_board.py  test_azuredevops_discover.py  test_azuredevops_errors.py  test_azuredevops_labels.py  test_azuredevops_misc.py  test_azuredevops_pulls.py  test_azuredevops_scaffold.py  test_azuredevops_tickets.py  test_azuredevops_viewer_identity.py  test_base_types.py  test_bulk_update_tickets.py  test_config.py  test_finder.py  test_github_batch.py  test_github_board.py  test_github_discover_projects.py  test_github_errors.py  test_github_labels.py  test_github_list_filters.py  test_github_list_prs.py  test_github_list_statuses.py  test_github_merge_pr.py  test_github_pipelines.py  test_github_relations.py  test_github_reviews.py  test_github_token_probe.py  test_github_viewer_identity.py  test_gitlab_discover_projects.py  test_gitlab_errors.py  test_gitlab_issues.py  test_gitlab_labels.py  test_gitlab_pipelines.py  test_gitlab_pulls.py  test_gitlab_relations.py  test_gitlab_scaffold.py  test_gitlab_token_probe.py  test_gitlab_viewer_identity.py  test_http_cache.py  test_idempotency.py  (+5 more)
