[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-python-projects"
version = "0.1.0"
description = "Domain library: project-list model, provider abstraction (GitHub/GitLab/Azure DevOps), and project loader for the Seretos agent-plugin ecosystem"
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
# NOTE: `lib-python-config` is a sibling source library, not yet published
# to a registry. Install it as an editable dep BEFORE installing this lib:
#
#     pip install -e ../lib-python-config
#     pip install -e .
#
# pyproject.toml can't reliably express the relative-path requirement in a
# way that both pip and build backends honor across platforms, so we leave
# it out and document the order instead.
dependencies = [
  "pydantic>=2.0",
  "ruamel.yaml>=0.18",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
