[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-python-projects"
version = "0.1.13"
description = "Domain library: project-list model, provider abstraction (GitHub/GitLab/Azure DevOps), and project loader for the Seretos agent-plugin ecosystem"
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
dependencies = [
  # Foundation lib: YAML loading, path discovery, and the generic
  # `LoadResult` we subclass as `ProjectsLoadResult`. Pinned to the
  # floating `release/0.x` branch so minor/patch foundation releases
  # flow into this lib's builds without a downstream bump. Bump to
  # `release/Nx` once lib-python-config reaches a Nx.0.0 breaking
  # release. For local development, run `pip install -e ../lib-python-config`
  # BEFORE `pip install -e .` to override the git-resolved copy with
  # an editable sibling checkout.
  "lib-python-config @ git+https://github.com/Seretos/lib-python-config@release/0.x",
  "pydantic>=2.0",
  "ruamel.yaml>=0.18",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
